# pipoke

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
docsrc/: index.rst
pipoke/: __init__.py  distribution.py  misc.py  pkg_diagnosis.py  pkg_vs_words.py  pypi_store.py  util.py  word_conditions.py
pipoke/data/: all_words.p
