[metadata]
name = pipoke
version = 0.0.7
url = https://github.com/thorwhalen/pipoke
platforms = any
description_file = README.md
description = Utils to acquire stuff from pypi and interrogate it
license = Apache Software License
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		pip
		pypi
		packaging
display_name = pipoke
root_url = https://github.com/thorwhalen

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	bs4
	requests
	argh
	py2store
	i2

